Update cubic grid to new gbasis API

--- a/examples/Cubic_Grids.ipynb
+++ b/examples/Cubic_Grids.ipynb
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -1175,8 +1175,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T18:42:42.716189732Z",
-     "start_time": "2024-01-03T18:42:41.430838571Z"
+     "end_time": "2024-01-17T17:35:15.509855521Z",
+     "start_time": "2024-01-17T17:35:14.485774258Z"
     }
    }
   },
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
@@ -1220,8 +1220,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T18:42:42.865976642Z",
-     "start_time": "2024-01-03T18:42:42.728318699Z"
+     "end_time": "2024-01-17T17:35:15.698501006Z",
+     "start_time": "2024-01-17T17:35:15.550872279Z"
     }
    }
   },
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
@@ -1293,8 +1293,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T18:42:44.399185405Z",
-     "start_time": "2024-01-03T18:42:42.873127625Z"
+     "end_time": "2024-01-17T17:35:17.223606411Z",
+     "start_time": "2024-01-17T17:35:15.709925753Z"
     }
    }
   },
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -1321,21 +1321,21 @@
       "Maximum error is 0.0 \n",
       "\n",
       "Interpolate using linear method applying the logarithm.\n",
-      "The errors are:  [125.09984416 154.63424541 118.42532707  35.01704324 137.80036555\n",
-      "  49.65298271 173.57713279 152.48491737  41.78871751 108.86369608]\n",
-      "Maximum error is 173.57713278829206 \n",
+      "The errors are:  [129.87705336 210.50053936  48.71458239 183.95787224  58.48414559\n",
+      " 185.3138218   14.65995522  32.03873386 141.50848448  91.22650573]\n",
+      "Maximum error is 210.5005393578688 \n",
       "\n",
       "Interpolate using cubic splines\n",
-      "The errors are:  [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 2.91958146e-34 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
+      "The errors are:  [4.95493244e-29 0.00000000e+00 0.00000000e+00 2.62645607e-54\n",
+      " 0.00000000e+00 2.07414243e-54 0.00000000e+00 0.00000000e+00\n",
       " 0.00000000e+00 0.00000000e+00]\n",
-      "Maximum error is 2.9195814559186114e-34 \n",
+      "Maximum error is 4.954932443772534e-29 \n",
       "\n",
       "Inteprolate using cubic splines appling the logarithm\n",
-      "The errors are:  [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 1.05375074e-72 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
+      "The errors are:  [1.67813053e-69 0.00000000e+00 0.00000000e+00 9.47945828e-93\n",
+      " 0.00000000e+00 1.87735222e-94 0.00000000e+00 0.00000000e+00\n",
       " 0.00000000e+00 0.00000000e+00]\n",
-      "Maximum error is 1.0537507424184038e-72 \n"
+      "Maximum error is 1.6781305292950751e-69 \n"
      ]
     }
    ],
@@ -1371,54 +1371,54 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T18:42:44.840015537Z",
-     "start_time": "2024-01-03T18:42:44.397177248Z"
+     "end_time": "2024-01-17T17:35:17.697763328Z",
+     "start_time": "2024-01-17T17:35:17.228218766Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Interpolate using linear method.\n",
-      "The errors are:  [0.00620382 0.00035427 0.09121084 0.01967367 0.02236908 0.01863983\n",
-      " 0.00936132 0.00974019 0.02821732 0.03316998 0.00350402 0.05200377\n",
-      " 0.00372375 0.05797401 0.01215082 0.00254476 0.02469108 0.03720183\n",
-      " 0.01605061 0.00368788 0.00234873 0.01674861 0.01034132 0.01491947\n",
-      " 0.01326072]\n",
-      "Maximum error is 0.091210836191982 \n",
+      "The errors are:  [0.07484486 0.05843998 0.00379538 0.01984037 0.08029362 0.00238702\n",
+      " 0.00092551 0.00623363 0.00314095 0.0005548  0.01822028 0.07464009\n",
+      " 0.02886849 0.00956343 0.00066423 0.00264256 0.03348824 0.01203519\n",
+      " 0.01138113 0.01240458 0.00574129 0.00489393 0.00800252 0.00696285\n",
+      " 0.02535359]\n",
+      "Maximum error is 0.08029362425231046 \n",
       "\n",
       "Interpolate using linear method applying the logarithm.\n",
-      "The errors are:  [1.5963788  1.48751708 1.10640116 1.12851935 1.19589806 1.39074581\n",
-      " 1.47916906 1.37026084 1.17962866 1.21028403 1.97318491 1.16634195\n",
-      " 1.67091208 1.09797285 1.46309434 2.02808307 1.25536809 1.12355052\n",
-      " 1.32940151 1.24222265 1.48875527 1.36197331 1.5649138  1.45095035\n",
-      " 1.50367307]\n",
-      "Maximum error is 2.0280830656971967 \n",
+      "The errors are:  [1.1161675  1.11174523 1.78957839 1.32289118 1.13196494 1.97546565\n",
+      " 1.80465366 1.47246521 1.83945646 1.93048436 1.50188752 1.10740947\n",
+      " 1.3177701  1.66462985 1.47822832 1.58754007 1.27000657 1.5605238\n",
+      " 1.58323025 1.34377591 1.27171153 1.37048069 1.52543828 1.58556614\n",
+      " 1.30364901]\n",
+      "Maximum error is 1.9754656492886569 \n",
       "\n",
       "Interpolate using cubic splines\n",
-      "The errors are:  [3.38891455e-04 1.02034913e-03 2.59808121e-03 6.80880710e-04\n",
-      " 1.41922816e-04 1.60178784e-04 1.34170028e-04 1.54935318e-04\n",
-      " 7.40327883e-04 3.59001326e-04 5.98234729e-04 1.56184309e-03\n",
-      " 1.74942124e-04 1.83049369e-03 1.07802828e-05 4.47513009e-04\n",
-      " 4.32271821e-04 7.61457122e-04 1.09466940e-04 6.07649224e-04\n",
-      " 1.16501363e-04 3.60100477e-04 2.15908741e-04 5.17327454e-04\n",
-      " 2.39631761e-04]\n",
-      "Maximum error is 0.0025980812123511665 \n",
+      "The errors are:  [1.85632557e-03 1.12536649e-03 3.27280320e-04 2.23140557e-04\n",
+      " 1.84787293e-03 5.65422108e-05 9.04572235e-05 3.88948373e-05\n",
+      " 5.89962496e-04 5.85747625e-04 2.97179925e-04 2.24981066e-03\n",
+      " 5.52820047e-04 3.65301822e-05 8.70798433e-05 8.26043615e-04\n",
+      " 5.81501656e-04 4.63552521e-05 1.72869528e-04 5.86469767e-04\n",
+      " 2.26690670e-04 2.75387741e-04 1.04859387e-04 1.61003865e-05\n",
+      " 3.04869310e-04]\n",
+      "Maximum error is 0.002249810661495766 \n",
       "\n",
       "Inteprolate using cubic splines appling the logarithm\n",
-      "The errors are:  [0.00000000e+00 5.55111512e-17 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 5.55111512e-17 1.11022302e-16 5.55111512e-17\n",
-      " 0.00000000e+00 1.11022302e-16 0.00000000e+00 0.00000000e+00\n",
-      " 5.55111512e-17 0.00000000e+00 5.55111512e-17 1.11022302e-16\n",
-      " 1.11022302e-16 0.00000000e+00 5.55111512e-17 5.55111512e-17\n",
-      " 5.55111512e-17 1.11022302e-16 5.55111512e-17 5.55111512e-17\n",
-      " 1.11022302e-16]\n",
-      "Maximum error is 1.1102230246251565e-16 \n"
+      "The errors are:  [0.00000000e+00 1.11022302e-16 0.00000000e+00 1.66533454e-16\n",
+      " 0.00000000e+00 2.77555756e-17 5.55111512e-17 0.00000000e+00\n",
+      " 5.55111512e-17 0.00000000e+00 1.66533454e-16 0.00000000e+00\n",
+      " 1.11022302e-16 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
+      " 0.00000000e+00 5.55111512e-17 0.00000000e+00 5.55111512e-17\n",
+      " 1.11022302e-16 0.00000000e+00 1.11022302e-16 0.00000000e+00\n",
+      " 5.55111512e-17]\n",
+      "Maximum error is 1.6653345369377348e-16 \n"
      ]
     }
    ],
@@ -1450,29 +1450,29 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T18:42:45.290759997Z",
-     "start_time": "2024-01-03T18:42:44.842576296Z"
+     "end_time": "2024-01-17T17:35:18.140637139Z",
+     "start_time": "2024-01-17T17:35:17.697934449Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Derivative in x-direction [-0.3114229  -0.53183619 -0.10272416  0.20160384  0.83375047  0.25262081\n",
-      " -0.19464265 -0.12515074 -0.70204644 -0.39900516  0.24526676  0.73595082\n",
-      "  0.31278883 -0.29749838 -0.35105698 -0.20113371  0.43545563  0.81641337\n",
-      "  0.67348714 -0.61839854  0.16329147 -0.12652398  0.4302782   0.44912824\n",
-      "  0.03148978].\n",
-      "Derivative (using logarithm) in x-direction [-0.31176952 -0.53276586 -0.10815628  0.20753213  0.839475    0.25142221\n",
-      " -0.19378483 -0.12877336 -0.70709017 -0.39717165  0.24627144  0.74012011\n",
-      "  0.31430077 -0.30383529 -0.35097637 -0.20159267  0.43364643  0.82153723\n",
-      "  0.67709086 -0.62177792  0.16349638 -0.1300241   0.43358881  0.45292033\n",
-      "  0.03307205].\n"
+      "Derivative in x-direction [ 0.44966001 -0.0746409   0.32089581 -0.07546461  0.54554847  0.20627795\n",
+      " -0.14072274  0.66261844 -0.2972023   0.34457451 -0.32099073 -0.11423361\n",
+      " -0.08264902  0.50458347 -0.63466411  0.4841932  -0.4330379  -0.24529974\n",
+      " -0.18459187  0.53905641  0.21726108 -0.70640259  0.04739939  0.22346623\n",
+      "  0.29397904].\n",
+      "Derivative (using logarithm) in x-direction [ 0.44964527 -0.07854491  0.32255703 -0.07894824  0.54387215  0.20733331\n",
+      " -0.13993251  0.65942717 -0.29850802  0.34248733 -0.32074628 -0.12006741\n",
+      " -0.08645023  0.50207346 -0.63064546  0.4843509  -0.43218027 -0.24429854\n",
+      " -0.18382983  0.54175631  0.21795361 -0.70430274  0.04966606  0.22237789\n",
+      "  0.29244541].\n"
      ]
     }
    ],
@@ -1497,8 +1497,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T18:42:56.745825629Z",
-     "start_time": "2024-01-03T18:42:45.298473164Z"
+     "end_time": "2024-01-17T17:35:30.332322693Z",
+     "start_time": "2024-01-17T17:35:18.145563171Z"
     }
    }
   },
@@ -1630,11 +1630,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T18:50:17.580179486Z",
-     "start_time": "2024-01-03T18:50:17.529656316Z"
+     "end_time": "2024-01-17T17:35:30.341249894Z",
+     "start_time": "2024-01-17T17:35:30.339822583Z"
     }
    },
-   "execution_count": 18
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -1678,11 +1678,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T18:50:18.865165406Z",
-     "start_time": "2024-01-03T18:50:18.613818162Z"
+     "end_time": "2024-01-17T17:35:30.672564208Z",
+     "start_time": "2024-01-17T17:35:30.342911920Z"
     }
    },
-   "execution_count": 19
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -1711,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -1759,14 +1759,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T18:50:21.147308546Z",
-     "start_time": "2024-01-03T18:50:21.046109637Z"
+     "end_time": "2024-01-17T17:35:30.886618478Z",
+     "start_time": "2024-01-17T17:35:30.673640250Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -1817,8 +1817,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T18:50:25.903196664Z",
-     "start_time": "2024-01-03T18:50:23.063245430Z"
+     "end_time": "2024-01-17T17:35:33.311645083Z",
+     "start_time": "2024-01-17T17:35:30.888414854Z"
     }
    }
   },
@@ -1861,7 +1861,7 @@
     "from gbasis.evals.density import evaluate_density\n",
     "\n",
     "# define function to compute dual descriptor on a grid\n",
-    "def compute_dual_descriptor(grid, rdm_an, rdm_cat, basis_an, basis_cat, type_an, type_cat):\n",
+    "def compute_dual_descriptor(grid, rdm_an, rdm_cat, basis_an, basis_cat):\n",
     "    \"\"\"Compute dual descriptor on a grid.\n",
     "\n",
     "    Parameters\n",
@@ -1876,14 +1876,10 @@
     "        Basis set of the anion.\n",
     "    basis_cat : list\n",
     "        Basis set of the cation.\n",
-    "    type_an : str\n",
-    "        Coordinate type of the anion.\n",
-    "    type_cat : str\n",
-    "        Coordinate type of the cation.\n",
     "    \"\"\"\n",
     "    # evaluate electron density of cation and anion on the grid\n",
-    "    dens_vals_cat = evaluate_density(rdm_cat, basis_cat, grid.points, coord_type=type_cat)\n",
-    "    dens_vals_an = evaluate_density(rdm_an, basis_an, grid.points, coord_type=type_an)\n",
+    "    dens_vals_cat = evaluate_density(rdm_cat, basis_cat, grid.points)\n",
+    "    dens_vals_an = evaluate_density(rdm_an, basis_an, grid.points)\n",
     "\n",
     "    # compute dual descriptor on the grid\n",
     "    return dens_vals_an - dens_vals_cat"
@@ -1891,11 +1887,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T18:50:25.908172672Z",
-     "start_time": "2024-01-03T18:50:25.904965600Z"
+     "end_time": "2024-01-17T17:35:33.327927183Z",
+     "start_time": "2024-01-17T17:35:33.312438088Z"
     }
    },
-   "execution_count": 22
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -1934,15 +1930,15 @@
     "mol_cation = load_one(\"ch2o_q+1.fchk\")\n",
     "\n",
     "# Construct molecular basis from wave-function information read by IOData\n",
-    "basis_cat, type_cat = from_iodata(mol_cation)\n",
-    "basis_an, type_an = from_iodata(mol_anion)\n",
+    "basis_cat = from_iodata(mol_cation)\n",
+    "basis_an = from_iodata(mol_anion)\n",
     "\n",
     "# get rdms for cation and anion\n",
     "rdm_cat = mol_cation.one_rdms[\"scf\"]\n",
     "rdm_an = mol_anion.one_rdms[\"scf\"]\n",
     "\n",
     "# compute dual descriptor on the grid\n",
-    "dd = compute_dual_descriptor(uniform_grid, rdm_an, rdm_cat, basis_an, basis_cat, type_an, type_cat)\n",
+    "dd = compute_dual_descriptor(uniform_grid, rdm_an, rdm_cat, basis_an, basis_cat)\n",
     "\n",
     "# plot dual descriptor isosurface\n",
     "mol_data = (atcoords, [\"O\", \"C\", \"H\", \"H\"])\n",
@@ -1956,11 +1952,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T18:50:30.280468186Z",
-     "start_time": "2024-01-03T18:50:27.369777787Z"
+     "end_time": "2024-01-17T17:35:35.565956985Z",
+     "start_time": "2024-01-17T17:35:33.329846727Z"
     }
    },
-   "execution_count": 23
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -2063,11 +2059,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T18:43:02.369047066Z",
-     "start_time": "2024-01-03T18:43:02.338332755Z"
+     "end_time": "2024-01-17T17:35:35.573031131Z",
+     "start_time": "2024-01-17T17:35:35.570586802Z"
     }
    },
-   "execution_count": 14
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -2088,11 +2084,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T18:49:34.199590221Z",
-     "start_time": "2024-01-03T18:43:02.352598323Z"
+     "end_time": "2024-01-17T17:42:13.728937774Z",
+     "start_time": "2024-01-17T17:35:35.573914960Z"
     }
    },
-   "execution_count": 15
+   "execution_count": 14
   },
   {
    "cell_type": "code",
@@ -2164,11 +2160,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T18:50:32.871375588Z",
-     "start_time": "2024-01-03T18:50:32.405473291Z"
+     "end_time": "2024-01-17T17:42:14.159980521Z",
+     "start_time": "2024-01-17T17:42:13.774861747Z"
     }
    },
-   "execution_count": 24
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -2217,11 +2213,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-03T18:50:36.243627022Z",
-     "start_time": "2024-01-03T18:50:36.094429002Z"
+     "end_time": "2024-01-17T17:42:14.303266427Z",
+     "start_time": "2024-01-17T17:42:14.162039380Z"
     }
    },
-   "execution_count": 25
+   "execution_count": 16
   }
  ],
  "metadata": {
