Update JCP_Paper.ipynb for correct paths

--- a/examples/JCP_Paper.ipynb
+++ b/examples/JCP_Paper.ipynb
@@ -33,7 +33,7 @@
     "! python -m pip install urllib3\n",
     "! python -m pip install git+https://github.com/theochem/grid.git\n",
     "! python -m pip install git+https://github.com/theochem/iodata.git\n",
-    "! python -m pip install git+https://github.com/maximilianvz/gbasis.git@address_issue_113\n",
+    "! python -m pip install git+https://github.com/theochem/gbasis.git\n",
     "\n",
     "import os\n",
     "from urllib.request import urlretrieve\n",
@@ -41,7 +41,7 @@
     "# download the required data files\n",
     "file_path = \"ch2o_q+0.fchk\"\n",
     "if not os.path.isfile(file_path):\n",
-    "    url = \"https://github.com/theochem/grid/blob/master/doc/notebooks/ch2o_q%2B0.fchk?raw=true\"\n",
+    "    url = \"https://github.com/theochem/grid/blob/master/examples/ch2o_q%2B0.fchk?raw=true\"\n",
     "    urlretrieve(url, file_path)"
    ]
   },
