Simplify dipole moment example

--- a/examples/JCP_Paper.ipynb
+++ b/examples/JCP_Paper.ipynb
@@ -678,11 +678,11 @@
     ")\n",
     "# calculate (X_a - X_c)**{n_x} (Y_a - Y_c)**{n_y} (Z_a - Z_c)**{n_z}\n",
     "cent_pts_with_order = (atcoords_cent ** orders[:, None])\n",
+    "# multiply over each corresponding moment axis (row)\n",
     "cent_pts_with_order = np.prod(cent_pts_with_order, axis=2)\n",
     "# calculate Z_a (X_a - X_c)**{n_x} (Y_a - Y_c)**{n_y} (Z_a - Z_c)**{n_z}\n",
-    "result = atcharges * cent_pts_with_order\n",
-    "# sum for each order\n",
-    "result = np.sum(result, axis=1)\n",
+    "result = np.einsum(\"ij,j->i\", cent_pts_with_order, atcharges)\n",
+    "\n",
     "# sum electric dipole moment and remove [0,0,0] moment value\n",
     "result = (result - integrals.T).flatten()[1:]\n",
     "\n",
