Add colab badge Interpolation_and_Poisson

--- a/examples/Interpolation_and_Poisson.ipynb
+++ b/examples/Interpolation_and_Poisson.ipynb
@@ -2,6 +2,18 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/theochem/grid/blob/master/examples/Interpolation_and_Poisson.ipynb\">\n",
+        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "collapsed": false
+      },
       "source": [
         "### Interpolation and Solving Poisson's Equation\n",
         "\n",
@@ -26,20 +38,17 @@
         "\n",
         "#### Example: Unit-charge distribution\n",
         "This example tries to interpolate the unit-charge distribution given by $f(r, \\theta, \\phi) = \\bigg( \\frac{\\alpha}{\\pi} \\bigg)^{1.5} e^{-\\alpha r_A^2}$, where $\\alpha = 0.25$ and $r_A$ is the radius centered at the coordinate $[0, 1, 0]$.  Since, this function does not depend on the angles, then $w_{lm} = 0$ when $l > 0$."
-      ],
-      "metadata": {
-        "collapsed": false
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "collapsed": true,
         "ExecuteTime": {
           "end_time": "2024-01-08T20:58:10.192004233Z",
           "start_time": "2024-01-08T20:58:10.094718751Z"
-        }
+        },
+        "collapsed": true
       },
       "outputs": [],
       "source": [
@@ -55,6 +64,13 @@
     {
       "cell_type": "code",
       "execution_count": 2,
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2024-01-08T20:58:10.461254804Z",
+          "start_time": "2024-01-08T20:58:10.191879006Z"
+        },
+        "collapsed": false
+      },
       "outputs": [],
       "source": [
         "# Construct Atomic Grid\n",
@@ -67,18 +83,18 @@
         "radial = btf.transform_1d_grid(oned)\n",
         "degree = 29\n",
         "atgrid = AtomGrid.from_pruned(radial, 1, sectors_r=[], sectors_degree=[degree], center=center)"
-      ],
-      "metadata": {
-        "collapsed": false,
-        "ExecuteTime": {
-          "end_time": "2024-01-08T20:58:10.461254804Z",
-          "start_time": "2024-01-08T20:58:10.191879006Z"
-        }
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 3,
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2024-01-08T20:58:10.840072685Z",
+          "start_time": "2024-01-08T20:58:10.463969456Z"
+        },
+        "collapsed": false
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -120,30 +136,30 @@
         "derivative = interpolate_func(random_pts, deriv=1, deriv_spherical=True)\n",
         "# Higher order derivative wrt to r can be calculated\n",
         "sec_deriv = interpolate_func(random_pts, deriv=2, only_radial_deriv=True)"
-      ],
-      "metadata": {
-        "collapsed": false,
-        "ExecuteTime": {
-          "end_time": "2024-01-08T20:58:10.840072685Z",
-          "start_time": "2024-01-08T20:58:10.463969456Z"
-        }
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "collapsed": false
+      },
       "source": [
         "#### Solving Poisson Equation\n",
         "\n",
         "The Poisson equation is defined as $\\nabla^2 V = - 4\\pi f(\\vec{\\textbf{r}})$, where $V$ is the unknown potential, $\\nabla^2$ is the Laplacian and $f$ is the charge distribution.\n",
         "It is well-known that the solution to this is given by $V(\\vec{\\textbf{r}}) = \\int \\frac{f(\\vec{\\textbf{r}}^\\prime)}{|\\vec{\\textbf{r}} - \\vec{\\textbf{r}}^\\prime| } d\\vec{\\textbf{r}}^\\prime$.  For the unit-charge distribution given above, the solution is given by $V(r, \\theta, \\phi) =  \\frac{\\text{erf} \\bigg[ \\sqrt{\\alpha} r_A  \\bigg]}{r_A},$ where ERF is the error function. Grid offers two methods of solving the Poisson equation over an atomic grid.  The recommended method is the `solve_poisson_bvp` and is used in this example."
-      ],
-      "metadata": {
-        "collapsed": false
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 4,
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2024-01-08T20:58:17.855028023Z",
+          "start_time": "2024-01-08T20:58:10.842833895Z"
+        },
+        "collapsed": false
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -185,14 +201,7 @@
         "print(f\"The maximum error: {np.max(err)}\")\n",
         "print(f\"The mean error: {np.mean(err)}\")\n",
         "print(f\"The standard dev: {np.std(err)}\")\n"
-      ],
-      "metadata": {
-        "collapsed": false,
-        "ExecuteTime": {
-          "end_time": "2024-01-08T20:58:17.855028023Z",
-          "start_time": "2024-01-08T20:58:10.842833895Z"
-        }
-      }
+      ]
     }
   ],
   "metadata": {
