--- a/examples/Molecular_Grid_Construction.ipynb
+++ b/examples/Molecular_Grid_Construction.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/theochem/grid/blob/master/examples/Molecular_Grid_Construction.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Constructing Molecular Grids\n",
     "Molecular grids are particularly useful in quantum chemistry for integrating functions that concentrate and are \"spike\" around finite set of points, usually the atomic nuclei. This is particularly needed for DFT computation or atom-in-molecule analysis.\n",
@@ -35,20 +47,17 @@
     "\n",
     "**Example: Formaldehyde**\n",
     "This example computes the integral of the electron density of Formaldehyde obtained from Gaussian calculation. The integral of the electron density should be the sum of the atomic charges (16 for Formaldehyde)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2024-01-16T15:18:34.285044660Z",
      "start_time": "2024-01-16T15:18:33.967271585Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [
     {
@@ -89,6 +98,9 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### Construction of Molecular Grid\n",
     "\n",
@@ -100,14 +112,18 @@
     "4. [MolGrid.from_pruned()](../pyapi/grid.molgrid.rst#grid.molgrid.MolGrid.from_pruned): Gives more control to the size of the angular grid based on the radius.  This is done by providing `r_sectors` list and `sector_degs` that controls what kind of angular grid to place at each radius point. This is useful for placing lower degree angular grids close to the nucleus and larger degree angular grids further away.\n",
     "\n",
     "See the function documentation for more information.  The first step here is to generate an one-dimensional grid to integrate over the radial coordinate $r \\in [0, \\infty)$.  This is done by constructing a Trapezoidal grid over $[-1, 1]$ and using the Becke Transformation to transform it to $[0, \\infty)$.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-16T15:18:34.499865044Z",
+     "start_time": "2024-01-16T15:18:34.283896296Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from grid.onedgrid import Trapezoidal\n",
@@ -117,56 +133,56 @@
     "oned = Trapezoidal(n_rpoints)           # Trapezoidal grid of that size\n",
     "rmin, R = 0.0, 0.5                      # Parameters for the Becke radial transform\n",
     "rgrid = LinearFiniteRTransform(rmin, 8).transform_1d_grid(oned)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-16T15:18:34.499865044Z",
-     "start_time": "2024-01-16T15:18:34.283896296Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "The Becke weights is constructed as the atom in molecular weights (also called nuclear weight functions)"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "The Becke weights is constructed as the atom in molecular weights (also called nuclear weight functions)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-16T15:18:34.504442100Z",
+     "start_time": "2024-01-16T15:18:34.500671708Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from grid.becke import BeckeWeights\n",
     "\n",
     "aim_weights = BeckeWeights()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-16T15:18:34.504442100Z",
-     "start_time": "2024-01-16T15:18:34.500671708Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "#### Constructor\n",
     "The first method of constructing (point 1 above) is using the initializor.  This is done by explicitly constructing an atomic grid over each center.\n",
     "The degree of the angular component of the atomic grid should depend on the charge of the atom.  It is recommended that the larger the atom, the larger\n",
     "the degree of the angular component. Similarly for the radial grid, the larger the atom, the larger the radial grid component should be.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-16T15:18:46.759909059Z",
+     "start_time": "2024-01-16T15:18:34.505672878Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -200,30 +216,30 @@
     "\n",
     "integral = molgrid.integrate(density)\n",
     "print(f\"The integral of electron density of Formaldehyde is {integral}.\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-16T15:18:46.759909059Z",
-     "start_time": "2024-01-16T15:18:34.505672878Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "#### from_preset method\n",
     "\n",
     "The disadvantage of the previous method is that it is difficult to choose the size of the angular degrees for each atom, and it can be cumbersome for larger atoms to construct atomic grids for each center.\n",
     "The `from_preset` method has a preset that handles it for the user that is simpler.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-16T15:18:51.874706764Z",
+     "start_time": "2024-01-16T15:18:46.761535272Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -241,29 +257,29 @@
     "density = evaluate_density(rdm, basis, molgrid.points)\n",
     "integral = molgrid.integrate(density)\n",
     "print(f\"The integral of electron density of Formaldehyde is {integral}.\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-16T15:18:51.874706764Z",
-     "start_time": "2024-01-16T15:18:46.761535272Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "#### from_size method\n",
     "\n",
     "This method is similar to before except you can explicitly set the size of the angular degrees.  This is the same across all atoms."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-16T15:18:53.486692981Z",
+     "start_time": "2024-01-16T15:18:51.874204180Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -281,17 +297,13 @@
     "density = evaluate_density(rdm, basis, molgrid.points)\n",
     "integral = molgrid.integrate(density)\n",
     "print(f\"The integral of electron density of Formaldehyde is {integral}.\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-16T15:18:53.486692981Z",
-     "start_time": "2024-01-16T15:18:51.874204180Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "#### from_pruned method\n",
     "\n",
@@ -305,14 +317,18 @@
     "                &L_{Q+1} \\text{ when } R a_{Q} < r.\n",
     "            \\end{align*}\n",
     "$$\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-16T15:18:55.194592365Z",
+     "start_time": "2024-01-16T15:18:53.483982471Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -349,14 +365,7 @@
     "density = evaluate_density(rdm, basis, molgrid.points)\n",
     "integral = molgrid.integrate(density)\n",
     "print(f\"The integral of electron density of Formaldehyde is {integral}.\")\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-16T15:18:55.194592365Z",
-     "start_time": "2024-01-16T15:18:53.483982471Z"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
