Add colab badge Multipole_Moments

--- a/examples/Multipole_Moments.ipynb
+++ b/examples/Multipole_Moments.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/theochem/grid/blob/master/examples/Multipole_Moments.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Multipole Moments\n",
     "\n",
@@ -27,29 +39,26 @@
     "\n",
     "where $N_{atoms}$ is the number of atoms, $Z_i$ is the atomic charge of the ith atom, $\\vec{R_i}$ is the ith coordinate of the atom, $\\vec{R_c}$ is the center of the molecule and $\\rho$ is the electron density of the molecule.\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "IOData is used to first read the wavefunction information of Formaldehyde."
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "IOData is used to first read the wavefunction information of Formaldehyde."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2024-01-15T20:42:35.436016745Z",
      "start_time": "2024-01-15T20:42:35.241682791Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [
     {
@@ -70,16 +79,23 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "In order to compute the moment integral, a molecular grid class is constructed."
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "In order to compute the moment integral, a molecular grid class is constructed."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-15T20:42:35.948897361Z",
+     "start_time": "2024-01-15T20:42:35.438896737Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from grid.becke import BeckeWeights\n",
@@ -99,34 +115,34 @@
     "    size=130,                    # The angular degree of the atomic grid over each carbon, and hydrogen.\n",
     "    aim_weights=BeckeWeights(), # Atom-in molecular weights: Becke weights,\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-15T20:42:35.948897361Z",
-     "start_time": "2024-01-15T20:42:35.438896737Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "The dipole moment can then be calculated."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-15T20:42:37.930341180Z",
+     "start_time": "2024-01-15T20:42:35.952444556Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -159,14 +175,7 @@
     "\n",
     "err = np.abs(true - desired)\n",
     "print(f\"Mean error {np.mean(err)} with maximum error {np.max(err)}\")\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-15T20:42:37.930341180Z",
-     "start_time": "2024-01-15T20:42:35.952444556Z"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
