Add colab badge One_dimensional_grids

--- a/examples/One_dimensional_grids.ipynb
+++ b/examples/One_dimensional_grids.ipynb
@@ -4,6 +4,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/theochem/grid/blob/master/examples/One_dimensional_grids.ipynb\">\n",
+        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# One-Dimensional and Radial Grids\n",
         "\n",
         "Grid supports several quadrature rules for one-dimensional grids, most of them in the [-1, 1] interval, within the [OneDGrid](https://grid.qcdevs.org/pyapi/grid.basegrid.html#grid.basegrid.OneDGrid) module.\n",
