Fix notebooks (api changes)
This commit updates the notebooks for consistency with api changes.

--- a/examples/Atom_Grid_Construction.ipynb
+++ b/examples/Atom_Grid_Construction.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "Having a radial grid, the angular grid can be specified by the angular grid `degrees` (or `sizes`). If only one value is provided (i.e., list/array of length one), the same angular grid is used for all radial grid points. Otherwise, the `degrees` (or `sizes`) list/array should have the same length as the number of radial grid points. Additionally (A, B, C, and D refer to the atomic grids constructed in the following code block):\n",
     "\n",
-    "- By default the Levedev-Laikov angular grids are used (A, C, and D), unless `use_spherical=True` which employs the Symmetric spherical t-design angular grids (B).\n",
+    "- By default the Levedev-Laikov angular grids are used (A, C, and D), unless `method=\"spherical\"` which employs the Symmetric spherical t-design angular grids (B).\n",
     "- If the provided `degrees` are not available, the closest available `degrees` are used (B).\n",
     "- To randomly rotate the angular grids at each radial grid point, the `rotate` argument can be used to provide a seed for random rotation matrix (C).\n"
    ]
@@ -115,8 +115,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ali/PythonProjects/grid/src/grid/atomgrid.py:883: UserWarning: Lebedev weights are negative which can introduce round-off errors.\n",
-      "  sphere_grid = AngularGrid(degree=deg_i, use_spherical=use_spherical)\n"
+      "/mnt/Data/Work/Ayers/QC-Devs/grid/src/grid/atomgrid.py:879: UserWarning: Lebedev weights are negative which can introduce round-off errors.\n",
+      "  sphere_grid = AngularGrid(degree=deg_i, method=method)\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
     "print(f\"AtomGrid A center        : {atgrid_ll.center}\\n\")\n",
     "\n",
     "# (B) AtomGrid from a radial grid and an angular degree (symmetric spherical t-design)\n",
-    "atgrid_ss = AtomGrid(rgrid, degrees=[10], use_spherical=True)\n",
+    "atgrid_ss = AtomGrid(rgrid, degrees=[10], method=\"spherical\")\n",
     "\n",
     "print(f\"AtomGrid B size          : {atgrid_ss.size}\")\n",
     "print(f\"AtomGrid B radial size   : {atgrid_ss.rgrid.size}\")\n",
@@ -224,7 +224,7 @@
    "source": [
     "## Pruned Grids `AtomGrid.from_pruned`\n",
     "\n",
-    "**[AtomGrid.from_pruned](https://grid.qcdevs.org/pyapi/grid.atomgrid.html#grid.atomgrid.AtomGrid.from_pruned)** construct an atomic grid given a radial grid, an atom radius, a set of radial sectors `sectors_r` and the degrees (or sizes) of angular grids `sectors_degrees` for each of the sectors. The `sectors_r` and `sectors_degrees` should have the same number of elements. This method is useful for constructing atomic grids with different angular grid resolutions for different radial sectors.\n"
+    "**[AtomGrid.from_pruned](https://grid.qcdevs.org/pyapi/grid.atomgrid.html#grid.atomgrid.AtomGrid.from_pruned)** construct an atomic grid given a radial grid, an atom radius, a set of radial sectors `r_sectors` and the degrees (or sizes) of angular grids `d_sectors` for each of the sectors. The `r_sectors` and `d_sectors` should have the same number of elements. This method is useful for constructing atomic grids with different angular grid resolutions for different radial sectors.\n"
    ]
   },
   {
@@ -244,7 +244,8 @@
       "AtomGrid size          : 132\n",
       "AtomGrid radial size   : 10\n",
       "AtomGrid angular degree: [3, 3, 3, 3, 5, 5, 5, 5, 5, 5] (Levedev-Laikov, multiple degrees)\n",
-      "AtomGrid center        : [0. 0. 0.]\n"
+      "AtomGrid center        : [0. 0. 0.]\n",
+      "\n"
      ]
     },
     {
@@ -264,11 +265,11 @@
     "# example: covalent radius of lithium\n",
     "radius = 2.418849439520986\n",
     "# radial sector 1 covers [0, 0.5 * radius], sector 2 covers [0.5 * radius, radius], etc.\n",
-    "# each sector has a different number of angular points defined by sectors_d\n",
+    "# each sector has a different number of angular points defined by d_sectors\n",
     "# note that the largest radial grid point is at r=3.0, so the last sector is not used\n",
-    "sectors_r = [0.5, 1.0, 1.5]\n",
-    "sectors_d = [3, 4, 5, 7]\n",
-    "atgrid = AtomGrid.from_pruned(rgrid, radius, sectors_r=sectors_r, sectors_degree=sectors_d)\n",
+    "r_sectors = [0.5, 1.0, 1.5]\n",
+    "d_sectors = [3, 4, 5, 7]\n",
+    "atgrid = AtomGrid.from_pruned(rgrid, radius, r_sectors=r_sectors, d_sectors=d_sectors)\n",
     "\n",
     "print(f\"AtomGrid size          : {atgrid.size}\")\n",
     "print(f\"AtomGrid radial size   : {atgrid.rgrid.size}\")\n",
@@ -290,7 +291,7 @@
    "source": [
     "## Preset Grids `AtomGrid.from_preset`\n",
     "\n",
-    "**[AtomGrid.from_preset](https://grid.qcdevs.org/pyapi/grid.atomgrid.html#grid.atomgrid.AtomGrid.from_preset)** builds an atomic grid given a radial grid and a preset angular grid name like `coarse`, `medium`, `fine`, `veryfine`, `ultrafine`, and `insane` (the names denote the increasing order of angular grid size) which uses a preset angular degrees for every element denoted by `atnum` (atomic number). In other words, every element has a predefined set of radial sector `sectors_r` and corresponding degrees `sectors_degrees` which is invoked by the `preset` argument.\n"
+    "**[AtomGrid.from_preset](https://grid.qcdevs.org/pyapi/grid.atomgrid.html#grid.atomgrid.AtomGrid.from_preset)** builds an atomic grid given a radial grid and a preset angular grid name like `coarse`, `medium`, `fine`, `veryfine`, `ultrafine`, and `insane` (the names denote the increasing order of angular grid size) which uses a preset angular degrees for every element denoted by `atnum` (atomic number). In other words, every element has a predefined set of radial sector `r_sectors` and corresponding degrees `d_sectors` which is invoked by the `preset` argument.\n"
    ]
   },
   {
@@ -320,7 +321,8 @@
       "AtomGrid B size          : 724\n",
       "AtomGrid B radial size   : 10\n",
       "AtomGrid B angular degree: [3, 5, 9, 11, 15, 15, 17, 17, 17, 17] (Levedev-Laikov, medium H)\n",
-      "AtomGrid B center        : [0. 0. 0.]\n"
+      "AtomGrid B center        : [0. 0. 0.]\n",
+      "\n"
      ]
     },
     {
