--- a/examples/JCP_Paper.ipynb
+++ b/examples/JCP_Paper.ipynb
@@ -106,7 +106,7 @@
     "from grid import AngularGrid\n",
     "\n",
     "# Make an instance of AngularGrid given a Lebedev-Laikov grid size\n",
-    "g = AngularGrid(size=140, use_spherical=False)\n",
+    "g = AngularGrid(size=140, method=\"Lebedev\")\n",
     "print(\"Number of angular grid points: \", g.size)   # outputs 146\n",
     "print(\"Shape of angular grid points: \", g.points.shape)   # outputs (146, 3)\n",
     "print(\"Shape of angular grid weights: \", g.weights.shape) # outputs (146,)\n",
@@ -706,7 +706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
