Fix links + title levels in notebooks

--- a/examples/Atom_Grid.ipynb
+++ b/examples/Atom_Grid.ipynb
@@ -55,7 +55,7 @@
       "source": [
         "## Construct Atomic Grid\n",
         "\n",
-        "There are multiple ways to construct an atomic grid, for a complete description see the [Atomic_Grid_Construction.ipynb]().\n",
+        "There are multiple ways to construct an atomic grid, for a complete description see the [Atomic_Grid_Construction.ipynb](.https://grid.qcdevs.org/notebooks/notebooks/atom_grid_construction.html).\n",
         "\n",
         "Here we construct an atomic grid from a radial grid instance and the degrees of the angular grid centered at the position of $\\textbf{He}$ nucleus. The radial grid is constructed by specifying the number of radial grid points. For more details on the radial and angular grids see [One_dimensional_grids.ipynb](https://grid.qcdevs.org/notebooks/one_dimensional_grids.html) and [Angular_Grid.ipynb](https://grid.qcdevs.org/notebooks/angular_grid.html).\n"
       ]
