deploy: f3ae67d06a88bae7fc9584dc38590ff667be2313

--- a/notebooks/molecular_grid.ipynb
+++ b/notebooks/molecular_grid.ipynb
@@ -171,7 +171,7 @@
    "source": [
     "### Integration\n",
     "\n",
-    "##### Example: Electron Density\n",
+    "#### Example: Electron Density\n",
     "\n",
     "This example shows how to use molecular grids to integrate the electron density $\\rho(\\textbf{r})$. This should equal to the number of electrons 16 of Formaldehyde. This is calculated using the [gbasis](https://github.com/theochem/gbasis) package\n"
    ]
