Add cells to ipynb examples needed for colab

--- a/examples/Molecular_Grid.ipynb
+++ b/examples/Molecular_Grid.ipynb
@@ -23,6 +23,31 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "/home/marco/miniconda3/envs/grid_env/lib/python3.10/site-packages/grid\n"
+          ]
+        }
+      ],
+      "source": [
+        "# # Install packages in Google Colab\n",
+        "# ! pip install qc-iodata\n",
+        "# ! pip install qc-grid\n",
+        "# ! pip install qc-gbasis\n",
+        "\n",
+        "\n",
+        "# # Download the example files\n",
+        "# from urllib.request import urlretrieve\n",
+        "# urlretrieve(\"https://raw.githubusercontent.com/theochem/grid/refs/heads/master/examples/ch2o_q%2B0.fchk\",\"ch2o_q+0.fchk\")"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 1,
       "metadata": {
         "ExecuteTime": {
@@ -449,7 +474,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "grid_env",
       "language": "python",
       "name": "python3"
     },
